--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,39 @@
 {
-    "name": "symfony/dom-crawler",
-    "type": "library",
-    "description": "Symfony DomCrawler Component",
-    "keywords": [],
-    "homepage": "https://symfony.com",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Fabien Potencier",
-            "email": "fabien@symfony.com"
-        },
-        {
-            "name": "Symfony Community",
-            "homepage": "https://symfony.com/contributors"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.9"
+  "name": "dan/dom-crawler",
+  "type": "library",
+  "description": "Symfony DomCrawler Fork for AiCrawler",
+  "keywords": [],
+  "homepage": "https://danrichards.net/",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Dan Richards",
+      "email": "danrichardsri@gmail.com"
     },
-    "require-dev": {
-        "symfony/css-selector": "~2.3"
+    {
+      "name": "Fabien Potencier",
+      "email": "fabien@symfony.com"
     },
-    "suggest": {
-        "symfony/css-selector": ""
-    },
-    "autoload": {
-        "psr-4": { "Symfony\\Component\\DomCrawler\\": "" },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
-    },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.7-dev"
-        }
+    {
+      "name": "Symfony Community",
+      "homepage": "https://symfony.com/contributors"
     }
+  ],
+  "require": {
+    "php": ">=5.5.9",
+    "symfony/polyfill-mbstring": "~1.0",
+    "symfony/css-selector": "2.7.*"
+  },
+  "autoload": {
+    "psr-4": { "Dan\\Symfony\\Component\\DomCrawler\\": "" },
+    "exclude-from-classmap": [
+      "/Tests/"
+    ]
+  },
+  "minimum-stability": "dev",
+  "extra": {
+    "branch-alias": {
+      "dev-master": "3.0-dev"
+    }
+  }
 }
